# pyFVDA

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: EventProcessor.rst  Modules.rst  Overview.rst  conf.py  eventListForTest.xlsx  example_pyFVDA.ipynb  index.rst
src/pyfvda/: SEP_analysis.py  __init__.py  eventProcessor.py  eventTimingGroup.py  skeleton.py
tests/: conftest.py  test_skeleton.py
