# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = pyFVDA
version = 0.1.2
description = A Python pacakge for Fractional Velocity Dispersion Analysis.
author = xw
author_email = xwu0011@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
# long_description_content_type = text/x-rst; charset=UTF-8
# url = 
# Add here related links, for example:
# project_urls =
    # Documentation = 
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3


[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    spacepy~=0.4.1
    cdasws>=1.7
    matplotlib~=3.7.1
    numpy~=1.24.2
    pandas>=2.0.0
    scipy~=1.10.1
    Shapely~=2.0.4
    openpyxl~=3.1.1
    ipympl~=0.9.3
    jupyter~=1.0.0
    xlsxwriter~=3.0.9
python_requires = >=3.8.13


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pyFVDA[PDF]` like:
# PDF = ReportLab; RXP


# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    Sphinx

[tool:pytest]
addopts =
    --cov pyfvda --cov-report term-missing
    --verbose
testpaths = tests

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
